调整了格式，增加了表达式二叉树的测试

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -10,6 +10,7 @@ endif
 TESTS =                          \
         test-alloc-testing       \
         test-arraylist           \
+        test-bi-tree            \
         test-avl-tree            \
         test-binary-heap         \
         test-binomial-heap       \
