增加了二叉排序树的程序和测试

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -11,6 +11,7 @@ TESTS =                          \
         test-alloc-testing       \
         test-arraylist           \
         test-bi-tree            \
+        test-bs-tree            \
         test-avl-tree            \
         test-binary-heap         \
         test-binomial-heap       \
