完成了图的最小生成树算法，修改了图的graph_free方法释放内存不完全的问题

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,7 @@
 
 AM_CFLAGS = $(TEST_CFLAGS) -I../src -g
 AM_CXXFLAGS = $(AM_CFLAGS)
-LDADD = ../src/.libs/libcalg.a libtestframework.a
+LDADD = ../src/libcalgtest.a libtestframework.a
 
 #if USE_VALGRIND
 #TESTS_ENVIRONMENT=./valgrind-wrapper
