--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(C Algorithms, 1.2.0, fraggle@removethisbit.gmail.com, c-algorithms)
+AC_INIT(C Algorithms, 1.2.0, dongshufeng@zju.edu.cn, c-algorithms)
 AC_CONFIG_AUX_DIR(autotools)
 AC_CONFIG_SRCDIR([src/base/arraylist.c])
 AC_CONFIG_MACRO_DIR([m4])
@@ -80,6 +80,7 @@ AC_CONFIG_FILES([
     src/base/Makefile
     src/ieeeformat/Makefile
     src/pscpu/Makefile
-	test/Makefile	
+	test/Makefile
 ])
+s
 AC_OUTPUT
